--- a/middleman-airbnb/source/stylesheets/config/_colors.scss
+++ b/middleman-airbnb/source/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+
+// My colors:
+$my-gray: #616668;
+$my-blue: #35d0ba;
+$my-red: #D23333;
+
