--- a/middleman-airbnb/source/stylesheets/config/_bootstrap_variables.scss
+++ b/middleman-airbnb/source/stylesheets/config/_bootstrap_variables.scss
@@ -21,5 +21,10 @@ $brand-warning:   $orange;
 $border-radius-base:  2px;
 $border-radius-large: 2px;
 $border-radius-small: 2px;
+$btn-primary-color: $my-red;
+$btn-primary-bg: $yellow;
 
 // Override other variables below!
+
+$btn-font-weight: 500;
+
